# yolov9_vietsol

./: .gitignore  1.jfif  Bird.py  Data  Depth.py  Phai.py  Truoc.py  Ve.py  chuong.py  detect.py  my_utils.py  pyproject.toml  train.txt  triangulation.py  yolov4-tiny-custom.cfg  yolov7-tiny-custom.cfg
models/model_weights/: README.md
mthong_detect/: my_functions.py  test.py  train_notebook.ipynb
