[tool.poetry]
name = "object-detection"
version = "0.1.0"
description = "Camera object detection"
authors = ["Vietsol"]
license = "Vietsol"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
torch = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
