[tool.poetry]
name = "object-detection"
version = "0.1.0"
description = "Camera object detection"
authors = ["Vietsol"]
license = "Vietsol"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
torch = ">=1.7.0"
ipykernel = "^6.29.3"
gitpython = "^3.1.42"
ipython = "^8.22.2"
matplotlib = ">=3.2.2"
numpy = ">=1.18.5"
opencv-python = ">=4.1.1"
pillow = ">=7.1.2"
psutil = "^5.9.8"
pyyaml = ">=5.3.1"
requests = ">=2.23.0"
scipy = ">=1.4.1"
thop = ">=0.1.1"
torchvision = ">=0.8.1"
tqdm = ">=4.64.0"
tensorboard = ">=2.4.1"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"
albumentations = ">=1.0.3"
pycocotools = ">=2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
